# solana-nft-fusion-with-ai

./: PROJECT_STRUCTURE.md  QUICK_START.md  README.md  docker-compose.yml  env.example  package.json  setup.sh
ai-models/: Dockerfile  fusion_engine.py  requirements.txt
backend/: package.json
backend/src/: app.module.ts  main.ts
backend/src/entities/: collection.entity.ts  fusion.entity.ts  nft.entity.ts  user.entity.ts
frontend/: Dockerfile  next.config.js  package.json  tailwind.config.js
programs/: Anchor.toml  Cargo.toml
programs/src/: lib.rs
utils/: solana-utils.ts
