[package]
name = "nft-fusion"
version = "0.1.0"
description = "Solana NFT Fusion Smart Contract"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nft_fusion"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
mpl-token-metadata = { version = "4.0.0", features = ["no-entrypoint"] }
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.2.0", features = ["no-entrypoint"] } 